Saliency map recipes for MRI and ECG (#89)
saliency maps and average saliency

--- a/notebooks/mri/mri_nifti_sketch.ipynb
+++ b/notebooks/mri/mri_nifti_sketch.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nii_dir = './nifti_scratch/T1/transforms/'\n",
+    "nii_dir = './nifti_scratch/T1/'\n",
     "nrow = 200\n",
     "ncol = 6\n",
     "counter = 0\n",
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nii_dir = './nifti_scratch/T2_FLAIR/lesions/'\n",
+    "nii_dir = './nifti_scratch/T2_FLAIR/'\n",
     "nrow = 200\n",
     "ncol = 5\n",
     "counter = 0\n",
