--- a/notebooks/saliency/saliency_maps.ipynb
+++ b/notebooks/saliency/saliency_maps.ipynb
@@ -57,10 +57,10 @@
    "outputs": [],
    "source": [
     "sys.argv = ['train', \n",
-    "            '--tensors', '/mnt/disks/pix-size-tensors/2019-04-29/', \n",
-    "            '--input_tensors', 'mri_slice', \n",
-    "            '--output_tensors', 'end_systole_volume',\n",
-    "            '--batch_size', '6',\n",
+    "            '--tensors', '/mnt/disks/sax-lax-40k-lvm/2019-11-21/', \n",
+    "            '--input_tensors', 't2_flair_brain_30_slices', \n",
+    "            '--output_tensors', 'age_2',\n",
+    "            '--batch_size', '1',\n",
     "            '--epochs', '2',  \n",
     "            '--learning_rate', '0.001',\n",
     "            '--training_steps', '128',\n",
@@ -68,14 +68,11 @@
     "            '--test_steps', '1',\n",
     "            '--model_file', '/mnt/ml4cvd/projects/jamesp/data/models/mri_slice_esv.hd5',\n",
     "            '--id', 'mri_slice_esv']\n",
+    "\n",
     "args = parse_args()\n",
-    "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(**args.__dict__)\n",
     "model = make_multimodal_multitask_model(**args.__dict__)\n",
-    "\n",
-    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(args.tensor_maps_in, args.tensor_maps_out,\n",
-    "                                                                        generate_test, args.test_steps)"
+    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(generate_test, args.test_steps)"
    ]
   },
   {
@@ -122,12 +119,9 @@
     "\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(**args.__dict__)\n",
     "model = make_multimodal_multitask_model(**args.__dict__)\n",
-    "\n",
-    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(args.tensor_maps_in, args.tensor_maps_out,\n",
-    "                                                                        generate_test, args.test_steps)"
+    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(generate_test, args.test_steps)"
    ]
   },
   {
@@ -325,7 +319,72 @@
    "outputs": [],
    "source": [
     "sys.argv = ['train', \n",
-    "            '--tensors', '/mnt/disks/ecg-rest-31k/2019-06-10/', \n",
+    "            '--tensors', '/mnt/disks/sax-lax-40k-teacher/2019-11-21/', \n",
+    "            '--input_tensors', 'ecg_rest_raw', \n",
+    "            '--output_tensors', 'myocardial_mass_noheritable_men_only',\n",
+    "            '--batch_size', '6',\n",
+    "            '--epochs', '2',  \n",
+    "            '--learning_rate', '0.001',\n",
+    "            '--training_steps', '128',\n",
+    "            '--validation_steps', '10',\n",
+    "            '--test_steps', '1',\n",
+    "            '--model_file', '/home/sam/ml/trained_models/ecg_rest_raw_unet_myocardial_mass_noheritable/ecg_rest_raw_unet_myocardial_mass_noheritable.hd5',\n",
+    "            '--id', 'err_myocardial_mass_noheritable_men_only']\n",
+    "args = parse_args()\n",
+    "\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(**args.__dict__)\n",
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
+    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(generate_test, args.test_steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_tensor = test_data['input_ecg_rest_raw_ecg_rest']\n",
+    "print(test_tensor.shape, test_tensor[3:4].shape)\n",
+    "_, axes = plt.subplots(6, 12, figsize=(18, 64))\n",
+    "[axes[i, j].plot(test_tensor[i,:,j].flatten('F')) for i in range(6) for j in range(12)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_ecg_array(ecg, rows=3, cols=4, time_interval=2.5, raw_scale=0.005, hertz=500):\n",
+    "    _, axes = plt.subplots(rows, cols, figsize=(18, 16))\n",
+    "    yy = ecg * raw_scale\n",
+    "    print(yy.shape, cols, rows, ecg.shape)\n",
+    "    for i in range(rows):\n",
+    "        for j in range(cols):\n",
+    "            start = int(i*time_interval*hertz)\n",
+    "            stop = int((i+1)*time_interval*hertz)\n",
+    "            axes[i, j].plot(range(start, stop), yy[start:stop, j + i*cols])\n",
+    "            axes[i, j].set_xlim(start, stop)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_ecg_array(test_tensor[0]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.argv = ['train', \n",
+    "            '--tensors', '/mnt/disks/ecg-rest-37k-tensors/2019-11-04/', \n",
     "            '--input_tensors', 'ecg_rest_1lead', \n",
     "            '--output_tensors', 'ecg_semi_coarse_with_poor',\n",
     "            '--batch_size', '6',\n",
@@ -334,16 +393,13 @@
     "            '--training_steps', '128',\n",
     "            '--validation_steps', '10',\n",
     "            '--test_steps', '1',\n",
-    "            '--model_file', '/home/sam/ml/trained_models/ecg_1lead_rhythm_only/ecg_1lead_rhythm_only.hd5',\n",
+    "            '--model_file', '/mnt/ml4cvd/projects/models/ecg_1lead_rhythm_only/ecg_1lead_rhythm_only.hd5',\n",
     "            '--id', 'ecg_1lead_rhythm_only']\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(**args.__dict__)\n",
     "model = make_multimodal_multitask_model(**args.__dict__)\n",
-    "\n",
-    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(args.tensor_maps_in, args.tensor_maps_out,\n",
-    "                                                                        generate_test, args.test_steps)"
+    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(generate_test, args.test_steps)"
    ]
   },
   {
@@ -386,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdir = '/mnt/disks/ecg-rest-31k/2019-06-10/'\n",
+    "xdir = '/mnt/disks/ecg-rest-37k-tensors/2019-11-04/'\n",
     "paths = [xdir+'1238558.hd5', xdir+'1258475.hd5', xdir+'1286494.hd5', xdir+'1381627.hd5', \n",
     "         xdir+'1487911.hd5', xdir+'1509361.hd5', xdir+'1578315.hd5', xdir+'1616127.hd5', xdir+'1723645.hd5', ]\n",
     "generator = TensorGenerator(8, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
