Tensorize annotated PNGs (#96)
labels from PNGs

--- a/notebooks/ecg/make_fake.ipynb
+++ b/notebooks/ecg/make_fake.ipynb
@@ -7,30 +7,16 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import csv\n",
-    "import math\n",
     "import h5py\n",
-    "import argparse\n",
+    "\n",
     "import numpy as np\n",
     "import xml.etree.ElementTree as et \n",
     "from collections import Counter, defaultdict\n",
     "\n",
-    "# Keras imports\n",
-    "from keras.models import Model\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
-    "\n",
-    "# ML4CVD Imports\n",
-    "from ml4cvd.plots import plot_ecg\n",
-    "from ml4cvd.arguments import parse_args\n",
-    "from ml4cvd.recipes import train_multimodal_multitask\n",
-    "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "DATA_DIRECTORY = '/mnt/disks/sax-lax-40k-teacher/2019-11-21/'"
+    "DATA_DIRECTORY = '/mnt/disks/sax-lax-40k/2019-11-08/'"
    ]
   },
   {
@@ -39,35 +25,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = Counter()\n",
-    "with open('/home/sam/lvh_hold_out_no_poor_new.txt', 'r') as samples:\n",
-    "    sample_list = list(csv.reader(samples, delimiter=','))\n",
-    "    hold_outs = [s[0] for s in sample_list]\n",
-    "    with open('/home/sam/ml/trained_models/ecg_rest_raw_myocardial_mass_noheritable/inference_ecg_rest_raw_myocardial_mass_noheritable.tsv', 'r') as lvms:\n",
-    "        lol = list(csv.reader(lvms, delimiter='\\t'))\n",
-    "        with open('/home/sam/inferred_lvm_on_hold_out.tsv', mode='w') as file_:\n",
-    "            file_writer = csv.writer(file_, delimiter='\\t', quotechar='\\'', quoting=csv.QUOTE_MINIMAL)\n",
-    "            file_writer.writerow(lol[0])\n",
-    "            for row in lol[1:]:\n",
-    "                if not os.path.exists(os.path.join(DATA_DIRECTORY, row[0] + '.hd5')):\n",
-    "                    stats['missing'] += 1\n",
-    "                    continue\n",
-    "                if row[0] not in hold_outs:\n",
-    "                    stats['not in hold out set'] += 1\n",
-    "                    continue\n",
-    "                with h5py.File(os.path.join(DATA_DIRECTORY, row[0] + '.hd5')) as hd5:\n",
-    "                    skip = False\n",
-    "                    if 'Poor data quality' in str(hd5['ecg_rest_text'][0]):\n",
-    "                        stats['poor quality'] += 1\n",
-    "                        skip = True\n",
-    "                    if 'ecg_rest_text' not in hd5:\n",
-    "                        stats['missing ecg'] += 1\n",
-    "                        skip = True\n",
-    "                    if not skip:\n",
-    "                        stats['written'] += 1\n",
-    "                        file_writer.writerow(row)\n",
-    "\n",
-    "print(stats)"
+    "def random_copy_hd5_datasets(source_hd5, source_hd6, destination_hd5, group_path='/'):\n",
+    "    for k in source_hd5[group_path]:\n",
+    "        if isinstance(source_hd5[group_path][k], h5py.Dataset):\n",
+    "            dice = np.random.rand()\n",
+    "            if dice > 0.5 and group_path + k in source_hd6:\n",
+    "                if source_hd6[group_path][k].chunks is None:\n",
+    "                    destination_hd5.create_dataset(group_path + k, data=source_hd6[group_path][k])\n",
+    "                else:\n",
+    "                    destination_hd5.create_dataset(group_path + k, data=source_hd6[group_path][k], compression='gzip')\n",
+    "            else:\n",
+    "                if source_hd5[group_path][k].chunks is None:\n",
+    "                    destination_hd5.create_dataset(group_path + k, data=source_hd5[group_path][k])\n",
+    "                else:\n",
+    "                    destination_hd5.create_dataset(group_path + k, data=source_hd5[group_path][k], compression='gzip')                \n",
+    "        else:\n",
+    "            #logging.debug(f\"copying group {group_path + k}\")\n",
+    "            random_copy_hd5_datasets(source_hd5, source_hd6, destination_hd5, group_path=group_path + k + '/')"
    ]
   },
   {
@@ -76,49 +50,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = Counter()\n",
-    "DATA_DIRECTORY = '/mnt/disks/sax-lax-40k/2019-11-08/'\n",
-    "with open('/home/sam/lvh_hold_out.txt', 'r') as volumes:\n",
-    "    lol = list(csv.reader(volumes, delimiter=','))\n",
-    "    holdout = [row[0] + '.hd5' for row in lol]\n",
-    "    with open('/home/sam/lvh_hold_out_no_poor_new.txt', 'w') as lvh:\n",
-    "        for file in sorted(os.listdir(DATA_DIRECTORY)):\n",
-    "            if file[-4:] != '.hd5':\n",
-    "                continue\n",
-    "            try:\n",
-    "                with h5py.File(os.path.join(DATA_DIRECTORY, file)) as hd5:\n",
-    "                    skip = False\n",
-    "                    if 'ecg_rest_text' in hd5 and 'Poor data quality' in str(hd5['ecg_rest_text'][0]):\n",
-    "                        stats['poor quality'] += 1\n",
-    "                        skip = True\n",
-    "                    if 'ecg_rest_text' not in hd5:\n",
-    "                        stats['missing ecg'] += 1\n",
-    "                        skip = True\n",
-    "                    if 'systole_frame_b2' not in hd5:\n",
-    "                        stats['missing MRI'] += 1\n",
-    "                        skip = True \n",
-    "                        \n",
-    "                    if file in holdout:\n",
-    "                        stats['in holdout'] += 1\n",
-    "                        if not skip:\n",
-    "                            lvh.write(file.replace('.hd5', '') + '\\n')\n",
-    "                        #skip = True\n",
-    "\n",
-    "                    if not skip:\n",
-    "                        stats['got it all'] += 1\n",
-    "                        #lvh.write(file.replace('.hd5', '') + '\\n')\n",
-    "            except:\n",
-    "                stats[f'failed to open {file}'] += 1\n",
-    "print(stats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(stats)"
+    "files = os.listdir(DATA_DIRECTORY)\n",
+    "for i,file1 in enumerate(files):\n",
+    "    file2 = files[i+1]\n",
+    "    if file1[-4:] != '.hd5' or file2[-4:] != '.hd5':\n",
+    "        continue\n",
+    "    if i > 10:\n",
+    "        break\n",
+    "    with h5py.File(os.path.join(DATA_DIRECTORY, file1)) as hd5:\n",
+    "        with h5py.File(os.path.join(DATA_DIRECTORY, file2)) as hd6:\n",
+    "            with h5py.File(f'fake_{i}.hd5', 'w') as hdfake:\n",
+    "                random_copy_hd5_datasets(hd5, hd6, hdfake)"
    ]
   },
   {
