--- a/notebooks/mri/mri_brain_dicom_sketch.ipynb
+++ b/notebooks/mri/mri_brain_dicom_sketch.ipynb
@@ -89,6 +89,58 @@
     "    axes[ideal_index//num_cols, ideal_index%num_cols].set_yticklabels([])\n",
     "    axes[ideal_index//num_cols, ideal_index%num_cols].set_xticklabels([])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_np = np.zeros((256, 256, 216))\n",
+    "for dcm_file in os.listdir(dcm_dir):\n",
+    "    if not dcm_file.endswith('.dcm'):\n",
+    "        continue\n",
+    "    dcm = pydicom.read_file(dcm_dir + dcm_file)\n",
+    "    if dcm.SeriesNumber in [5, 11]:\n",
+    "        continue\n",
+    "    i = int(dcm.InstanceNumber)-1\n",
+    "    dicom_np[..., i] = dcm.pixel_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_to_nifti = np.flip(np.swapaxes(dicom_np, 0, -1))\n",
+    "plt.imshow(dicom_to_nifti[:,:,50], cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 190 - 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dcm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
