--- a/notebooks/mri/mri_nifti_sketch.ipynb
+++ b/notebooks/mri/mri_nifti_sketch.ipynb
@@ -108,8 +108,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
+    "rm -rf ./nifti_scratch\n",
     "mkdir ./nifti_scratch\n",
-    "unzip /mnt/ml4cvd/projects/bulk/brain_mri/1000169_20252_2_0.zip -d ./nifti_scratch/"
+    "unzip /mnt/ml4cvd/projects/bulk/brain_mri/1000503_20252_2_0.zip -d ./nifti_scratch/"
    ]
   },
   {
@@ -139,15 +140,17 @@
     "    if len(counts) < 10:\n",
     "        [print(f'Value {v} has {c}') for v,c in zip(unique, counts)]\n",
     "    print(nifti_array.shape)\n",
-    "    for i in range(nrow):\n",
-    "        if i >= nifti_array.shape[-1]:\n",
-    "            continue\n",
-    "        ax = plt.subplot(gs[i, counter])\n",
-    "        ax.imshow(nifti_array[..., i], cmap='gray', vmin=np.min(nifti_array), vmax=np.max(nifti_array))\n",
-    "        ax.set_yticklabels([])\n",
-    "        ax.set_xticklabels([])\n",
-    "    plt.tight_layout()\n",
-    "    counter += 1"
+    "    if nii_file == 'T1.nii.gz':\n",
+    "        break\n",
+    "#     for i in range(nrow):\n",
+    "#         if i >= nifti_array.shape[-1]:\n",
+    "#             continue\n",
+    "#         ax = plt.subplot(gs[i, counter])\n",
+    "#         ax.imshow(nifti_array[..., i], cmap='gray', vmin=np.min(nifti_array), vmax=np.max(nifti_array))\n",
+    "#         ax.set_yticklabels([])\n",
+    "#         ax.set_xticklabels([])\n",
+    "#     plt.tight_layout()\n",
+    "#     counter += 1"
    ]
   },
   {
@@ -159,7 +162,7 @@
     "%%bash\n",
     "rm -rf ./nifti_scratch\n",
     "mkdir ./nifti_scratch\n",
-    "unzip /mnt/ml4cvd/projects/bulk/brain_mri/1000169_20253_2_0.zip -d ./nifti_scratch/"
+    "unzip /mnt/ml4cvd/projects/bulk/brain_mri/1000503_20253_2_0.zip -d ./nifti_scratch/"
    ]
   },
   {
@@ -185,6 +188,7 @@
     "    print('\\n' + nii_file)\n",
     "    nifti_array = nifti_mri.get_fdata()\n",
     "    print(nifti_array.shape)\n",
+    "    break\n",
     "    for i in range(nrow):\n",
     "        if i >= nifti_array.shape[-1]:\n",
     "            continue\n",
@@ -202,14 +206,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_nifti_array_3d(a, slice_axis=-1):\n",
+    "def plot_nifti_array_3d(a, slice_axis=0):\n",
     "    sides = int(np.ceil(np.sqrt(a.shape[slice_axis])))\n",
     "    _, axes = plt.subplots(sides, sides, figsize=(16, 16))\n",
     "    print(nifti_array.shape)\n",
     "    vmin = np.min(a)\n",
     "    vmax = np.max(a)\n",
     "    for i in range(a.shape[slice_axis]):\n",
-    "        axes[i//sides, i%sides].imshow(nifti_array[..., i], cmap='gray', vmin=vmin, vmax=vmax)\n",
+    "        axes[i//sides, i%sides].imshow(nifti_array[i, ...], cmap='gray', vmin=vmin, vmax=vmax)\n",
     "        axes[i//sides, i%sides].set_yticklabels([])\n",
     "        axes[i//sides, i%sides].set_xticklabels([])"
    ]
@@ -230,7 +234,8 @@
     "    print('\\n' + nii_file)\n",
     "    nifti_array = nifti_mri.get_fdata()\n",
     "    print(nifti_array.shape)\n",
-    "    plot_nifti_array_3d(nifti_array)"
+    "    plot_nifti_array_3d(nifti_array)\n",
+    "    break"
    ]
   },
   {
@@ -238,7 +243,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.imshow(nifti_array[:, :, 150], cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 80 - 210 # 147"
+   ]
   }
  ],
  "metadata": {
