--- a/docs/mutect/mutect.tex
+++ b/docs/mutect/mutect.tex
@@ -131,7 +131,7 @@ We use a version of the somatic likelihoods model, described below, with the fol
 \item Starting from the same initialization as below, we stop after a single iteration.
 \end{itemize}
 
-Under the first assumption the contribution of ref bases to the sum in Equation \ref{tumor-lod} vanishes -- errorless ref bases contribute no entropy -- so we only need to sum over alt bases.  By the second assumption the likelihood of an alt read is related to its base quality (and associated error rate $\epsilon$) as $\ell_{r,{\rm alt}} = 1 - \epsilon_r$.
+Under the first assumption the contribution of ref bases to the sum in Equation \ref{tumor-lod} vanishes---errorless ref bases contribute no entropy---so we only need to sum over alt bases.  By the second assumption the likelihood of an alt read is related to its base quality (and associated error rate $\epsilon$) as $\ell_{r,{\rm alt}} = 1 - \epsilon_r$.
 
 We compute Equation \ref{tumor-lod} for two possibilities; first, that an alt allele exists, second that only the ref allele exists.  In the former case, Initializing $\bar{z}_{r,{\rm ref(alt)}} = 1$ for ref (alt) bases a single iteration for $q(\vf)$ gives $\vbeta = (N_{\rm alt} + 1, N_{\rm ref} + 1)$.  For alt reads $r$ we then obtain from Equation \ref{z-bar}
 \begin{equation}
@@ -230,7 +230,7 @@ P({\rm error}) = 1 - (1 - \textrm{max artifact error prob})(1 - \textrm{max non-
 \code{FilterMutectCalls} goes over an unfiltered vcf in three passes, two to learn any unknown parameters of the filters' models and to set a threshold on $P({\rm error})$, and one to apply the learned filters.  This section describes methods for determining the threshold on error probability.  One option is to simply set a fixed value $p$ on the error probability, below which a call is considered a real somatic variant.  This non-default behavior can be set via \code{--threshold-strategy CONSTANT --initial-threshold <double>}.
 
 \subsubsection{F Score Thresholding}
-\code{FilterMutectCalls} optimizes the F-score -- the harmonic mean of recall and precision -- as its default thresholding strategy.  The \code{--f-score-beta <double>} command line argument can be set to change the relative weight of recall to precision.  In order to optimize the F-score, \code{FilterMutectCalls} sorts all variants by the probability that they are errors, from least to greatest and calculates the F-score for thresholds in which the first $n$ variants pass, starting from $n = 0$ and ending at $n = N$, the total number of candidates.  This is a cheap $O(N)$ computation because initially the expected number of true positive and false positive calls are both zero.  When the threshold increases to admit a variant with error probability $p$, the expected number of true positive calls increases by $1 - p$ and the expected number of false positive calls increases by $p$.  The total expected number of real variants is $\sum_n (1 - p_n)$.  These quantities suffice to calculate recall and precision for every threshold.
+\code{FilterMutectCalls} optimizes the F-score---the harmonic mean of recall and precision---as its default thresholding strategy.  The \code{--f-score-beta <double>} command line argument can be set to change the relative weight of recall to precision.  In order to optimize the F-score, \code{FilterMutectCalls} sorts all variants by the probability that they are errors, from least to greatest and calculates the F-score for thresholds in which the first $n$ variants pass, starting from $n = 0$ and ending at $n = N$, the total number of candidates.  This is a cheap $O(N)$ computation because initially the expected number of true positive and false positive calls are both zero.  When the threshold increases to admit a variant with error probability $p$, the expected number of true positive calls increases by $1 - p$ and the expected number of false positive calls increases by $p$.  The total expected number of real variants is $\sum_n (1 - p_n)$.  These quantities suffice to calculate recall and precision for every threshold.
 
 \subsubsection{False Discovery Rate Thresholding}
 \code{FilterMutectCalls} can also choose to maximize sensitivity subject to a maximum allowable false discovery rate using the \code{--threshold-strategy FALSE\_DISCOVERY\_RATE --false-discovery-rate <double>}.  For this calculation \code{FilterMutectCalls} also sorts the error probabilities $p_n$ from least to greatest.  If we allow the first $M$ variants to pass the expected false discovery rate is
@@ -267,7 +267,7 @@ Several filters are hard filters that assign an error probability of 1 whenever 
 %AF CLUSTERING MODEL
 %%%%%%%%%%%%%%
 \subsection{Allele Fraction Clustering Model}
-Several of \code{FilterMutectCalls}'s probabilistic filters rely on the following model for the tumor's spectrum of allele fractions.  At the top of the model is a binary indicator for whether a variant is neither a technical artifact or a non-somatic mutation.
+Several of \code{FilterMutectCalls}'s probabilistic filters rely on the following model for the tumor's spectrum of allele fractions.  At the top of the model is a binary indicator for whether a variant is either a somatic variant or a sequencing error, but not a technical artifact or a non-somatic mutation.
 \begin{equation}
 P({\rm consider}) = (1 - \textrm{max artifact error prob})(1 - \textrm{max non-somatic prob}).
 \end{equation}
@@ -279,18 +279,18 @@ P({\rm Sequencing~error}) =& P({\rm consider}) (1 - \pi_{\rm real}) \\
 P({\rm Cluster~}k) =& P({\rm consider}) \pi_{\rm real} \pi_k 
 \end{align}
 
-\code{Mutect2} emits the likelihood ratio between sequencing error and a real variant assuming a flat prior.  However, we can approximately compute the likelihood ratio that a non-flat Beta prior would have produced.  We can do this because in Equation \ref{tumor-lod} a change in the prior allele fraction is unlikely to affect $\bar{z}$ very much - usually the allele that a read supports is clear regardless of prior.  Therefore, only the term $g(\valpha) - g(\vbeta)$ changes.  Since $\vbeta = \valpha + \vn$, where $\vn$ is the vector of observed read counts per allele we can convert the log-likelihood obtained with flat prior $\valpha_0$ to one reflecting an allele fraction prior $\valpha$ by adding
+\code{Mutect2} emits the likelihood ratio between sequencing error and a real variant assuming a flat prior.  However, we can approximately compute the likelihood ratio that a non-flat Beta prior would have produced.  We can do this because in Equation \ref{tumor-lod} a change in the prior allele fraction is unlikely to affect $\bar{z}$ very much---usually the allele that a read supports is clear regardless of prior.  Therefore, only the term $g(\valpha) - g(\vbeta)$ changes.  Since $\vbeta = \valpha + \vn$, where $\vn$ is the vector of observed read counts per allele we can convert the log-likelihood obtained with flat prior $\valpha_0$ to one reflecting an allele fraction prior $\valpha$ by adding
 \begin{equation}
 \Delta {\rm log~odds}(\valpha) = \Delta \ln P(\mathbb{R} | \mathbb{A}) = \left[ g(\valpha) - g(\valpha + \vn) \right] - \left[ g(\valpha_0) - g(\valpha_0 + \vn) \right].
 \end{equation}
 
-Note that for high-allele fraction and background clusters $\valpha$ is simply the vector $(\alpha, \beta)$ of Beta distribution shape parameters, while for the binomial clusters we can treat as an arbitrarily sharp beta distribution with identical mean.  Since only \textit{ratios} of likelihoods are meaningful, we may WLOG set the likelihood of reads given sequencing error to be $P({\rm reads}|{\rm Sequencing~error}) = 1$ and then set the likelihood fo each allele fraction cluster to be $P({\rm reads}|{\rm Cluster~}k)  = \exp \left[ {\rm Mutect2~log~odds} + \Delta {\rm log~odds}(\valpha) \right]$.  The likelihood of a new cluster is the average over all possible new allele fractions of the likelihood, which is, by definition, simply the original \code{Mutect2} likelihood that integrated over a flat prior.  Thus we have likelihoods for every cluster.  Combined with the priors, this gives us the conditional posterior for Gibbs sampling the cluster assignment of a candidate variant.
+Note that for high-allele fraction and background clusters $\valpha$ is simply the vector $(\alpha, \beta)$ of Beta distribution shape parameters, while for the binomial clusters we can treat as an arbitrarily sharp beta distribution with identical mean.  Since only \textit{ratios} of likelihoods are meaningful, we may WLOG set the likelihood of reads given sequencing error to be $P({\rm reads}|{\rm Sequencing~error}) = 1$ and then set the likelihood of each allele fraction cluster to be $P({\rm reads}|{\rm Cluster~}k)  = \exp \left[ {\rm Mutect2~log~odds} + \Delta {\rm log~odds}(\valpha) \right]$.  The likelihood of a new cluster is the average over all possible new allele fractions of the likelihood, which is, by definition, simply the original \code{Mutect2} likelihood that integrated over a flat prior.  Thus we have likelihoods for every cluster.  Combined with the priors, this gives us the conditional posterior for Gibbs sampling the cluster assignment of a candidate variant.
 
 We can estimate the parameters of the model by maximum likelihood via the EM algorithm.  For example, we estimate $\pi_L$ as the total number of length-$L$ indels in the non-error clusters divided by the total number of callable sites\footnote{This is emitted by \code{Mutect2} and passed to \code{FilterMutectCalls}.}, $\pi_k$ as the total number of variants assigned to the cluster $k$ divided by the total number of non-error assignments, etc.  The allele fraction of a binomial cluster is estimated as its total alt read count divided by its total read count.  Finally, the beta distributions of the high-allele fraction and background clusters are fit by brute force likelihood optimization.
 
 To initialize the model, we begin with a background cluster with a flat Beta distribution.  Then we iteratively add clusters by the following approach until the Bayes information criterion (BIC) decreases.  To add a cluster, we perform an E step and record the responsibilities of each datum to belong to the background cluster.  Next we calculate quantiles of allele fraction weighted by this posterior.  For example, the 0.1 quantile is the AF below which is contained 0.1 of the total responsibility for the background cluster.  Then, weighted by these background responsibilities, we add up the posterior probabilities for each variant to belong to each allele fraction quantile under a flat prior assumption.  The next peak we try to add is the quantile that maximizes this sum.  We perform several EM iterations before calculating the BIC.
 
-Once the model converges, the combination of cluster weights and allele-fraction-adjusted likelihoods lets us compute the posterior probability that a candidate variant is a sequencing error, which determines the \code{weak\_evidence} filter.  Since the clusters also define distributions on alt allele counts -- the high-AF and background clusters define beta-binomials and the other clusters define binomials -- we also have the mixture model distribution $P({\rm alt~count} | {\rm total~count}, {\rm somatic})$, which the contamination and germline filters use.
+Once the model converges, the combination of cluster weights and allele-fraction-adjusted likelihoods lets us compute the posterior probability that a candidate variant is a sequencing error, which determines the \code{weak\_evidence} filter.  Since the clusters also define distributions on alt allele counts---the high-AF and background clusters define beta-binomials and the other clusters define binomials---we also have the mixture model distribution $P({\rm alt~count} | {\rm total~count}, {\rm somatic})$, which the contamination and germline filters use.
 
 
 %%%%%%%%%%%
@@ -476,7 +476,7 @@ gatk CalculateContamination -I tumor.pileups \
 
 \code{CalculateContamination} is the GATK's fast, simple, and accurate method for calculating the contamination of a sample.  This methods does not require a matched normal, makes no assumptions about the number of contaminating samples, and remains accurate even when the sample has a lot of copy number variation.
 
-The inputs are a bam file and a vcf of common variants -- for example ExAC, gnomAD, or 1000 Genomes -- with their allele frequencies.  The basic idea, which comes from ContEst\footnote{ContEst: estimating cross-contamination of human samples in next-generation sequencing data, \textit{Bioinformatics} \textbf{27}, 2601 (2011)} by Kristian Cibulskis and others in the Broad Institute Cancer Genome Analysis group, is simply to count ref reads at hom alt sites and subtract the number of ref reads expected from sequencing error to obtain the number of ref reads contaminating these hom alt sites.  Finally, we use the allele frequencies to account for the fact that some contaminating reads have the alt allele.  The only subtlety is in distinguishing hom alt sites from loss of heterozygosity events, which we describe below.
+The inputs are a bam file and a vcf of common variants---for example ExAC, gnomAD, or 1000 Genomes---with their allele frequencies.  The basic idea, which comes from ContEst\footnote{ContEst: estimating cross-contamination of human samples in next-generation sequencing data, \textit{Bioinformatics} \textbf{27}, 2601 (2011)} by Kristian Cibulskis and others in the Broad Institute Cancer Genome Analysis group, is simply to count ref reads at hom alt sites and subtract the number of ref reads expected from sequencing error to obtain the number of ref reads contaminating these hom alt sites.  Finally, we use the allele frequencies to account for the fact that some contaminating reads have the alt allele.  The only subtlety is in distinguishing hom alt sites from loss of heterozygosity events, which we describe below.
 
 Suppose we have a set $\mathbb{H}$ of SNPs at which our sample is homozygous for the alternate allele.  Let $N_{\rm ref}$ be the total number of ref reads at these sites.  We can decompose $N_{\rm ref}$ as follows:
 \begin{align}
